--- a/probatxoa.css
+++ b/probatxoa.css
@@ -1,13 +1,30 @@
 body {
-    background-color: lightgreen;
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
         margin: 0;
         padding: 0;
     }
-nav {
-    background-color: #444;
-    padding: 10px;
+.goiburua{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background: black;
+    color: white;
+    z-index: 1000;
+        }
+.barrukoaflex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
     }
+div a{
+    color: white;
+    text-decoration: ;
+}
 nav ul {
     list-style: none;
     margin: 0;
